# InstallService

./: .gitignore  CMakeLists.txt  README.md  buildDebug.bat
InstallService/: CMakeLists.txt  adminChecker.cpp  createService.cpp  logging.cpp  main.cpp  pathUtils.cpp
glog/lib/: glog.lib
include/: adminChecker.hpp  createService.hpp  helpers.hpp  logging.hpp  pathUtils.hpp
include/service_installer/: Cli.hpp  IServiceBackend.hpp  Installer.hpp  Paths.hpp  Platform.hpp  Process.hpp  ServiceSpec.hpp
src/: Cli.cpp  Installer.cpp  Paths.cpp  Platform.cpp  Process.cpp  main.cpp
src/platform/: PlatformImpl.hpp  ProcessImpl.hpp
src/platform/linux/: BackendLinuxSystemd.cpp  PlatformLinux.cpp  ProcessLinux.cpp  RemoveDirLinux.cpp
src/platform/windows/: BackendWinSc.cpp  PlatformWin.cpp  ProcessWin.cpp  RemoveDirWin.cpp
